Fix icon next to 'life as a torchboxer' in high contrast mode

--- a/components/BeingAtTorchbox/LifeAsATorchboxer/LifeAsATorchboxer.module.scss
+++ b/components/BeingAtTorchbox/LifeAsATorchboxer/LifeAsATorchboxer.module.scss
@@ -80,4 +80,10 @@
         margin: auto $grid * 2 0 auto;
         transform: rotate(0deg);
     }
+
+    @include hcm() {
+        path {
+            fill: ActiveText;
+        }
+    }
 }
